--- a/package.json
+++ b/package.json
@@ -19,8 +19,11 @@
     "@angular/platform-browser-dynamic": "^15.1.0",
     "@angular/router": "^15.1.0",
     "@auth0/angular-jwt": "^5.1.2",
+    "marked": "^8.0.1",
     "ngx-drag-drop": "^15.1.0",
     "ngx-pagination": "^6.0.3",
+    "ngx-rating": "^0.0.9",
+    "ngx-star-rating": "^2.1.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.12.0"
