--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "^15.1.0",
+    "@angular/cdk": "^15.0.0",
     "@angular/common": "^15.1.0",
     "@angular/compiler": "^15.1.0",
     "@angular/core": "^15.1.0",
@@ -19,18 +20,22 @@
     "@angular/platform-browser-dynamic": "^15.1.0",
     "@angular/router": "^15.1.0",
     "@auth0/angular-jwt": "^5.1.2",
+    "@swimlane/dragula": "^3.8.0",
+    "@swimlane/ngx-dnd": "^9.0.0",
+    "@types/dragula": "^3.7.4",
+    "angular-ng-stepper": "^2.0.0",
+    "bs-stepper": "^1.7.0",
     "marked": "^8.0.1",
+    "ng-multiselect-dropdown": "^1.0.0",
     "ngx-drag-drop": "^15.1.0",
     "ngx-pagination": "^6.0.3",
-    "ngx-rating": "^0.0.9",
-    "ngx-star-rating": "^2.1.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.12.0"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "^15.1.3",
-    "@angular/cli": "~15.1.3",
+    "@angular/cli": "^15.2.10",
     "@angular/compiler-cli": "^15.1.0",
     "@types/jasmine": "~4.3.0",
     "jasmine-core": "~4.5.0",
