--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "jwt-decode": "^4.0.0",
     "marked": "^8.0.1",
     "ng-multiselect-dropdown": "^1.0.0",
+    "ngx-device-detector": "^8.0.0",
     "ngx-drag-drop": "^15.1.0",
     "ngx-pagination": "^6.0.3",
     "rxjs": "~7.8.0",
